--- a/index.html
+++ b/index.html
@@ -1171,7 +1171,7 @@
                 </div>
                 
                 <div class="hero-image">
-                    <img src="images/z.jpeg" alt="Zain">
+                    <img src="images/z.png" alt="Zain">
                 </div>
             </div>
         </div>
